--- a/index.html
+++ b/index.html
@@ -2,91 +2,136 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Drixy College Football Schedule</title>
+<title>Drixy College Football</title>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <style>
   body {
     margin: 0;
-    font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif;
-    background: #121212;
-    color: #fff;
+    font-family: system-ui, -apple-system, Segoe UI, sans-serif;
+    background: #1e1e1e;
+    color: #ffffff;
   }
 
-  /* ====== NDSU PRIDE STRIPE HEADER ====== */
+  /* ===== NDSU PRIDE STRIPE ===== */
   .header {
-    background: #004F23; /* NDSU Green */
-    padding: 1.2rem 1.5rem 0.7rem;
+    background: #004F23;
+    padding: 1.5rem 1rem 1rem;
     text-align: center;
-    font-size: 1.8rem;
-    font-weight: 700;
-    position: relative;
-  }
-  .header::after {
-    content: "";
-    display: block;
-    height: 10px;
-    background: #FFC72A; /* NDSU Gold */
-    width: 100%;
-    margin-top: 0.4rem;
+    font-size: 1.9rem;
+    font-weight: 800;
+    border-bottom: 10px solid #FFC72A;
   }
 
-  #status {
-    text-align: center;
-    padding: 0.6rem;
-    font-size: 0.9rem;
-    color: #f1f1f1;
-    opacity: 0.9;
-  }
-
-  /* ======= TABLE ======= */
+  /* Light greys */
   table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 0.8rem;
-    font-size: 0.9rem;
+    margin-top: 1rem;
   }
 
   thead {
-    background: #1c1c1c;
+    background: #303030;
   }
+
   th {
-    text-align: left;
-    padding: 0.6rem 0.8rem;
-    color: #FFC72A; /* Gold headers */
-    font-weight: 600;
-    border-bottom: 2px solid #004F23;
+    padding: 0.75rem;
+    color: #FFC72A;
+    font-size: 0.95rem;
   }
 
   tr:nth-child(even) {
-    background: #0E0E0E;
+    background: #2b2b2b;
   }
+
   tr:nth-child(odd) {
-    background: #050505;
+    background: #242424;
   }
 
   td {
-    padding: 0.6rem 0.8rem;
+    padding: 0.65rem;
+    font-size: 0.9rem;
+  }
+
+  /* Team logos */
+  .team {
+    display: flex;
+    align-items: center;
+    gap: 0.45rem;
+  }
+  .team img {
+    width: 28px;
+    height: 28px;
+    border-radius: 4px;
+  }
+
+  .rank {
+    color: #FFC72A;
+    margin-right: 4px;
+    font-weight: bold;
+  }
+
+  .filters {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+
+  .filters label {
+    background: #303030;
+    padding: 0.4rem 0.7rem;
+    border-radius: 6px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+  }
+
+  .week-nav {
+    display: flex;
+    justify-content: center;
+    margin: 1rem auto;
+    gap: 1rem;
+  }
+
+  .week-btn {
+    background: #FFC72A;
+    border: none;
+    padding: 0.5rem 1rem;
+    font-weight: 700;
+    border-radius: 6px;
+    cursor: pointer;
   }
 
   .division-pill {
     background: #FFC72A;
     color: #000;
-    padding: 0.15rem 0.45rem;
-    border-radius: 999px;
-    font-size: 0.75rem;
     font-weight: 700;
+    border-radius: 8px;
+    padding: 0.1rem 0.4rem;
   }
 
-  .status-final { color: #22c55e; font-weight: 700; }
-  .status-live { color: #ff7f50; font-weight: 700; }
-  .status-scheduled { color: #ccc; }
 </style>
 </head>
 
 <body>
-<div class="header">College Football – Full Week Unified Schedule</div>
-<div id="status">Loading current week…</div>
+<div class="header">College Football – Full Week</div>
+
+<div class="filters">
+  <label><input type="checkbox" class="divCheck" value="fbs" checked />FBS</label>
+  <label><input type="checkbox" class="divCheck" value="fcs" checked />FCS</label>
+  <label><input type="checkbox" class="divCheck" value="d2" checked />D2</label>
+  <label><input type="checkbox" class="divCheck" value="d3" checked />D3</label>
+</div>
+
+<div class="week-nav">
+  <button id="prevWeek" class="week-btn">← Previous Week</button>
+  <div id="weekLabel" style="font-weight:700;font-size:1.1rem;"></div>
+  <button id="nextWeek" class="week-btn">Next Week →</button>
+</div>
+
+<div id="status" style="text-align:center;margin:1rem 0;color:#ccc;">Loading…</div>
 
 <table>
 <thead>
@@ -95,147 +140,105 @@
     <th>Div</th>
     <th>Matchup</th>
     <th>TV</th>
-    <th>Status</th>
   </tr>
 </thead>
-<tbody id="scheduleBody"></tbody>
+<tbody id="gamesTable"></tbody>
 </table>
 
 <script>
-/* ============================
-   CONFIG
-============================ */
-const API_KEY = "CXUq4XiFsiIhzjVUJa7F4kGFAcUntHEuRp4qWzuhB3kJvoyEG6iqOb2f5zO0mq+0";  // <-- INSERT YOUR API KEY
-const CFBD_BASE = "https://api.collegefootballdata.com";
+let currentYear = new Date().getFullYear();
+let currentWeek = null;
+let allData = null;
 
-/* ============================
-   FETCH CURRENT WEEK
-============================ */
-async function getCurrentWeek() {
-  const year = new Date().getFullYear();
-  const url = `${CFBD_BASE}/calendar?year=${year}`;
-
-  const res = await fetch(url, {
-    headers: { "Authorization": `Bearer ${API_KEY}` }
-  });
-
-  if (!res.ok) throw new Error("Failed to load CFBD calendar");
-
-  const data = await res.json();
+async function detectCurrentWeek() {
+  // ESPN weeks follow CFBD's mapping; use CFBD’s calendar
+  const res = await fetch(`https://api.collegefootballdata.com/calendar?year=${currentYear}`);
+  const weeks = await res.json();
   const today = new Date();
 
-  // Find the week where today is between startDate and endDate
-  const current = data.find(w => {
-    const s = new Date(w.startDate);
-    const e = new Date(w.endDate);
-    return today >= s && today <= e;
+  const w = weeks.find(w => {
+    return today >= new Date(w.startDate) && today <= new Date(w.endDate);
   });
 
-  if (!current) throw new Error("Could not determine current CFB week");
-
-  return { week: current.week, year };
+  currentWeek = w ? w.week : 1;
 }
 
-/* ============================
-   FETCH ONE DIVISION
-============================ */
-async function getDivisionGames(year, week, division) {
-  const url = `${CFBD_BASE}/games?year=${year}&week=${week}&division=${division}`;
+async function loadSchedule() {
+  document.getElementById("status").textContent =
+    `Loading schedule for Week ${currentWeek}…`;
 
-  const res = await fetch(url, {
-    headers: { "Authorization": `Bearer ${API_KEY}` }
-  });
+  const url = `/api/schedule?year=${currentYear}&week=${currentWeek}`;
+  const data = await fetch(url).then(r => r.json());
+  allData = data;
 
-  if (!res.ok) return [];
+  document.getElementById("weekLabel").textContent =
+    `Week ${currentWeek} (${currentYear})`;
 
-  const games = await res.json();
-
-  return games.map(g => ({
-    division,
-    home: g.home_team,
-    away: g.away_team,
-    time: g.start_date,
-    tv: g.tv || "",
-    status: g.status || "scheduled",
-  }));
+  renderTable();
 }
 
-/* ============================
-   RENDER TABLE
-============================ */
-function renderGames(games) {
-  const tbody = document.getElementById("scheduleBody");
-  tbody.innerHTML = "";
+function renderTable() {
+  if (!allData) return;
 
-  if (!games.length) {
-    tbody.innerHTML = `<tr><td colspan="5">No games found.</td></tr>`;
-    return;
+  const selected = Array.from(document.querySelectorAll(".divCheck:checked"))
+    .map(cb => cb.value);
+
+  const rows = [];
+  for (const div of selected) {
+    for (const g of allData.divisions[div]) {
+      rows.push(g);
+    }
   }
 
-  games.sort((a, b) => (a.time || "").localeCompare(b.time || ""));
+  const tbody = document.getElementById("gamesTable");
+  tbody.innerHTML = "";
 
-  for (const g of games) {
+  rows.forEach(g => {
     const tr = document.createElement("tr");
 
-    const timeStr = g.time ? new Date(g.time).toLocaleTimeString([], {
-      hour: "numeric",
-      minute: "2-digit"
-    }) : "";
-
-    function divName(d) {
-      return { fbs: "FBS", fcs: "FCS", d2: "DII", d3: "DIII" }[d] || d.toUpperCase();
-    }
-
-    function statusClass(s) {
-      const st = s.toLowerCase();
-      if (st.includes("final")) return "status-final";
-      if (st.includes("in") || st.includes("live")) return "status-live";
-      return "status-scheduled";
-    }
-
     tr.innerHTML = `
-      <td>${timeStr}</td>
-      <td><span class="division-pill">${divName(g.division)}</span></td>
-      <td>${g.away} @ ${g.home}</td>
+      <td>${g.time || ""}</td>
+      <td><span class="division-pill">${g.division.toUpperCase()}</span></td>
+      <td>
+        <div class="team">
+          ${g.away.logo ? `<img src="${g.away.logo}" />` : ""}
+          <span class="rank">${g.away.rank || ""}</span>
+          ${g.away.team}
+        </div>
+        @
+        <div class="team">
+          ${g.home.logo ? `<img src="${g.home.logo}" />` : ""}
+          <span class="rank">${g.home.rank || ""}</span>
+          ${g.home.team}
+        </div>
+      </td>
       <td>${g.tv}</td>
-      <td class="${statusClass(g.status)}">${g.status}</td>
     `;
 
     tbody.appendChild(tr);
-  }
+  });
+
+  document.getElementById("status").textContent =
+    `Loaded ${rows.length} games.`;
 }
 
-/* ============================
-   MAIN LOADER
-============================ */
-async function loadSchedule() {
-  const status = document.getElementById("status");
-  status.textContent = "Detecting current week…";
+document.querySelectorAll(".divCheck").forEach(cb => {
+  cb.addEventListener("change", renderTable);
+});
 
-  try {
-    const { year, week } = await getCurrentWeek();
+document.getElementById("prevWeek").onclick = () => {
+  currentWeek = Math.max(1, currentWeek - 1);
+  loadSchedule();
+};
+document.getElementById("nextWeek").onclick = () => {
+  currentWeek++;
+  loadSchedule();
+};
 
-    status.textContent = `Loading Week ${week}, ${year}…`;
-
-    const divisions = ["fbs", "fcs", "d2", "d3"];
-
-    const results = await Promise.all(
-      divisions.map(d => getDivisionGames(year, week, d))
-    );
-
-    const allGames = results.flat();
-
-    status.textContent = `Loaded ${allGames.length} games for Week ${week}`;
-
-    renderGames(allGames);
-
-  } catch (err) {
-    console.error(err);
-    status.textContent = "Error loading schedule.";
-  }
-}
-
-loadSchedule();
+(async function init() {
+  await detectCurrentWeek();
+  await loadSchedule();
+})();
 </script>
 
 </body>
