Refactor index.html for College Football layout
Updated HTML structure and styles for College Football page, including changes to viewport meta tag, header, controls, and table rendering logic.

--- a/index.html
+++ b/index.html
@@ -2,248 +2,180 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8" />
-<title>Drixy College Football</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>College Football – Full Week</title>
 
 <style>
-  body {
-    margin: 0;
-    font-family: system-ui, -apple-system, Segoe UI, sans-serif;
-    background: #1e1e1e;
-    color: #ffffff;
-  }
+    body {
+        font-family: Arial, sans-serif;
+        background: #0B3A2E; /* NDSU Green */
+        color: #F8D22A;     /* NDSU Gold */
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
 
-  /* ===== NDSU PRIDE STRIPE ===== */
-  .header {
-    background: #004F23;
-    padding: 1.5rem 1rem 1rem;
-    text-align: center;
-    font-size: 1.9rem;
-    font-weight: 800;
-    border-bottom: 10px solid #FFC72A;
-  }
+    header {
+        background: #0A2F25;
+        padding: 25px;
+        font-size: 32px;
+        font-weight: bold;
+        border-bottom: 5px solid #F8D22A;
+    }
 
-  /* Light greys */
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 1rem;
-  }
+    .controls {
+        margin-top: 20px;
+    }
 
-  thead {
-    background: #303030;
-  }
+    .controls label {
+        margin: 0 10px;
+        font-size: 18px;
+        cursor: pointer;
+    }
 
-  th {
-    padding: 0.75rem;
-    color: #FFC72A;
-    font-size: 0.95rem;
-  }
+    button {
+        background: #F8D22A;
+        color: #0B3A2E;
+        padding: 10px 20px;
+        margin: 10px;
+        border: none;
+        font-size: 16px;
+        border-radius: 8px;
+        cursor: pointer;
+        font-weight: bold;
+    }
 
-  tr:nth-child(even) {
-    background: #2b2b2b;
-  }
+    button:hover {
+        background: white;
+    }
 
-  tr:nth-child(odd) {
-    background: #242424;
-  }
+    table {
+        width: 95%;
+        margin: 25px auto;
+        border-collapse: collapse;
+        font-size: 18px;
+        background: #162E28;
+        color: white;
+    }
 
-  td {
-    padding: 0.65rem;
-    font-size: 0.9rem;
-  }
+    th {
+        background: #0A2F25;
+        padding: 12px;
+        border-bottom: 3px solid #F8D22A;
+    }
 
-  /* Team logos */
-  .team {
-    display: flex;
-    align-items: center;
-    gap: 0.45rem;
-  }
-  .team img {
-    width: 28px;
-    height: 28px;
-    border-radius: 4px;
-  }
+    td {
+        padding: 10px;
+        border-bottom: 1px solid #24443B;
+    }
 
-  .rank {
-    color: #FFC72A;
-    margin-right: 4px;
-    font-weight: bold;
-  }
-
-  .filters {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    margin-top: 1rem;
-  }
-
-  .filters label {
-    background: #303030;
-    padding: 0.4rem 0.7rem;
-    border-radius: 6px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    gap: 0.4rem;
-  }
-
-  .week-nav {
-    display: flex;
-    justify-content: center;
-    margin: 1rem auto;
-    gap: 1rem;
-  }
-
-  .week-btn {
-    background: #FFC72A;
-    border: none;
-    padding: 0.5rem 1rem;
-    font-weight: 700;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-
-  .division-pill {
-    background: #FFC72A;
-    color: #000;
-    font-weight: 700;
-    border-radius: 8px;
-    padding: 0.1rem 0.4rem;
-  }
-
+    .loading {
+        font-size: 20px;
+        margin-top: 25px;
+        color: white;
+    }
 </style>
+
 </head>
-
 <body>
-<div class="header">College Football – Full Week</div>
 
-<div class="filters">
-  <label><input type="checkbox" class="divCheck" value="fbs" checked />FBS</label>
-  <label><input type="checkbox" class="divCheck" value="fcs" checked />FCS</label>
-  <label><input type="checkbox" class="divCheck" value="d2" checked />D2</label>
-  <label><input type="checkbox" class="divCheck" value="d3" checked />D3</label>
+<header>College Football – Full Week</header>
+
+<div class="controls">
+    <label><input type="checkbox" id="fbs" checked> FBS</label>
+    <label><input type="checkbox" id="fcs" checked> FCS</label>
+    <label><input type="checkbox" id="d2" checked> D2</label>
+    <label><input type="checkbox" id="d3" checked> D3</label>
+    <label><input type="checkbox" id="naia" checked> NAIA</label>
 </div>
 
-<div class="week-nav">
-  <button id="prevWeek" class="week-btn">← Previous Week</button>
-  <div id="weekLabel" style="font-weight:700;font-size:1.1rem;"></div>
-  <button id="nextWeek" class="week-btn">Next Week →</button>
+<div class="controls">
+    <button onclick="changeWeek(-1)">← Previous Week</button>
+    <button onclick="changeWeek(1)">Next Week →</button>
 </div>
 
-<div id="status" style="text-align:center;margin:1rem 0;color:#ccc;">Loading…</div>
+<div id="status" class="loading">Loading...</div>
 
 <table>
-<thead>
-  <tr>
-    <th>Time</th>
-    <th>Div</th>
-    <th>Matchup</th>
-    <th>TV</th>
-  </tr>
-</thead>
-<tbody id="gamesTable"></tbody>
+    <thead>
+        <tr>
+            <th>Time</th>
+            <th>Div</th>
+            <th>Matchup</th>
+            <th>TV</th>
+        </tr>
+    </thead>
+    <tbody id="schedule"></tbody>
 </table>
 
 <script>
-let currentYear = new Date().getFullYear();
-let currentWeek = null;
-let allData = null;
+    let currentYear = new Date().getFullYear();
+    let currentWeek = getCurrentCFBWeek();
 
-async function detectCurrentWeek() {
-  const res = await fetch(`https://api.collegefootballdata.com/calendar?year=${currentYear}`);
-  const weeks = await res.json();
-  const today = new Date();
-
-  const w = weeks.find(w =>
-    today >= new Date(w.startDate) && today <= new Date(w.endDate)
-  );
-
-  currentWeek = w ? w.week : 1;
-}
-
-async function loadSchedule() {
-  document.getElementById("status").textContent =
-    `Loading schedule for Week ${currentWeek}…`;
-
-  const url = `/api/schedule?year=${currentYear}&week=${currentWeek}`;
-  const data = await fetch(url).then(r => r.json());
-
-  allData = data.divisions;
-
-  document.getElementById("weekLabel").textContent =
-    `Week ${currentWeek} (${currentYear})`;
-
-  renderTable();
-}
-
-function renderTable() {
-  if (!allData) return;
-
-  const selected = Array.from(document.querySelectorAll(".divCheck:checked"))
-    .map(cb => cb.value);
-
-  const rows = [];
-
-  for (const div of selected) {
-    const games = allData[div] || [];
-    for (const g of games) {
-      rows.push(g);
+    function getCurrentCFBWeek() {
+        const today = new Date();
+        const reference = new Date(today.getFullYear(), 7, 26); // Aug 26 = Week 0
+        const diff = Math.floor((today - reference) / (7 * 24 * 60 * 60 * 1000));
+        return Math.max(1, diff);
     }
-  }
 
-  const tbody = document.getElementById("gamesTable");
-  tbody.innerHTML = "";
+    function changeWeek(delta) {
+        currentWeek += delta;
+        loadSchedule();
+    }
 
-  rows.forEach(g => {
-    const tr = document.createElement("tr");
+    async function loadSchedule() {
+        document.getElementById("status").innerText = "Loading...";
 
-    tr.innerHTML = `
-      <td>${g.time || ""}</td>
-      <td><span class="division-pill">${g.division.toUpperCase()}</span></td>
-      <td>
-        <div class="team">
-          ${g.away.logo ? `<img src="${g.away.logo}" />` : ""}
-          ${g.away.rank ? `<span class="rank">${g.away.rank}</span>` : ""}
-          ${g.away.team}
-        </div>
-        @
-        <div class="team">
-          ${g.home.logo ? `<img src="${g.home.logo}" />` : ""}
-          ${g.home.rank ? `<span class="rank">${g.home.rank}</span>` : ""}
-          ${g.home.team}
-        </div>
-      </td>
-      <td>${g.tv || ""}</td>
-    `;
+        const url = `/api/schedule?year=${currentYear}&week=${currentWeek}`;
+        let data;
 
-    tbody.appendChild(tr);
-  });
+        try {
+            const res = await fetch(url);
+            data = await res.json();
+        } catch (e) {
+            document.getElementById("status").innerText = "Error loading data.";
+            return;
+        }
 
-  document.getElementById("status").textContent =
-    `Loaded ${rows.length} games.`;
-}
+        const rows = [];
+        const divs = data.divisions;
 
-document.querySelectorAll(".divCheck").forEach(cb => {
-  cb.addEventListener("change", renderTable);
-});
+        if (document.getElementById("fbs").checked) rows.push(...label(divs.fbs, "FBS"));
+        if (document.getElementById("fcs").checked) rows.push(...label(divs.fcs, "FCS"));
+        if (document.getElementById("d2").checked)  rows.push(...label(divs.d2, "D2"));
+        if (document.getElementById("d3").checked)  rows.push(...label(divs.d3, "D3"));
+        if (document.getElementById("naia").checked) rows.push(...label(divs.naia, "NAIA"));
 
-document.getElementById("prevWeek").onclick = () => {
-  currentWeek = Math.max(1, currentWeek - 1);
-  loadSchedule();
-};
+        renderTable(rows);
+    }
 
-document.getElementById("nextWeek").onclick = () => {
-  currentWeek++;
-  loadSchedule();
-};
+    function label(list, div) {
+        return list.map(g => ({
+            time: g.time,
+            matchup: g.matchup,
+            tv: g.tv,
+            div: div
+        }));
+    }
 
-(async function init() {
-  await detectCurrentWeek();
-  await loadSchedule();
-})();
-</script>
+    function renderTable(rows) {
+        const tbody = document.getElementById("schedule");
+        tbody.innerHTML = "";
 
+        if (!rows.length) {
+            document.getElementById("status").innerText = "No games found.";
+            return;
+        }
 
-</body>
-</html>
+        document.getElementById("status").innerText = "";
+
+        rows.forEach(r => {
+            const tr = document.createElement("tr");
+            tr.innerHTML = `
+                <td>${r.time}</td>
+                <td>${r.div}</td>
+                <td>${r.matchup}</td>
+                <td>${r.tv || ""}</td>
+            `;
+            tbody.appendC
