--- a/index.html
+++ b/index.html
@@ -1,92 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
 <title>College Football – Full Week</title>
-
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <style>
     body {
-        font-family: Arial, sans-serif;
-        background: #0B3A2E; /* NDSU Green */
-        color: #F8D22A;     /* NDSU Gold */
         margin: 0;
         padding: 0;
+        font-family: system-ui, sans-serif;
+        background: #003300; /* NDSU green */
+        color: #f1f1b0;      /* NDSU gold-tint */
         text-align: center;
     }
-
     header {
-        background: #0A2F25;
-        padding: 25px;
-        font-size: 32px;
+        font-size: 2.2rem;
         font-weight: bold;
-        border-bottom: 5px solid #F8D22A;
+        padding: 1.4rem 0;
+        background: #004d00;
+        color: #ffcc00;
+        border-bottom: 6px solid #ffcc00;
     }
-
     .controls {
-        margin-top: 20px;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
-
     .controls label {
-        margin: 0 10px;
-        font-size: 18px;
-        cursor: pointer;
+        margin-right: 1rem;
+        font-size: 1rem;
     }
-
     button {
-        background: #F8D22A;
-        color: #0B3A2E;
-        padding: 10px 20px;
-        margin: 10px;
+        background: #ffcc00;
         border: none;
-        font-size: 16px;
-        border-radius: 8px;
+        padding: 0.6rem 1.2rem;
+        font-size: 1rem;
+        margin: 0.4rem;
+        border-radius: 6px;
         cursor: pointer;
         font-weight: bold;
     }
-
     button:hover {
-        background: white;
+        background: #ffd633;
     }
-
     table {
-        width: 95%;
-        margin: 25px auto;
+        width: 100%;
         border-collapse: collapse;
-        font-size: 18px;
-        background: #162E28;
-        color: white;
+        margin-top: 1rem;
     }
-
-    th {
-        background: #0A2F25;
-        padding: 12px;
-        border-bottom: 3px solid #F8D22A;
+    thead {
+        background: #004d00;
+        color: #ffcc00;
+        font-size: 1.1rem;
     }
-
-    td {
-        padding: 10px;
-        border-bottom: 1px solid #24443B;
+    th, td {
+        padding: 0.75rem;
+        border-bottom: 1px solid #006600;
     }
-
-    .loading {
-        font-size: 20px;
-        margin-top: 25px;
-        color: white;
+    tbody tr:nth-child(even) {
+        background: #002200;
+    }
+    tbody tr:nth-child(odd) {
+        background: #001a00;
     }
 </style>
-
 </head>
+
 <body>
 
 <header>College Football – Full Week</header>
 
 <div class="controls">
-    <label><input type="checkbox" id="fbs" checked> FBS</label>
-    <label><input type="checkbox" id="fcs" checked> FCS</label>
-    <label><input type="checkbox" id="d2" checked> D2</label>
-    <label><input type="checkbox" id="d3" checked> D3</label>
-    <label><input type="checkbox" id="naia" checked> NAIA</label>
+    <label><input type="checkbox" id="chkFBS" checked> FBS</label>
+    <label><input type="checkbox" id="chkFCS" checked> FCS</label>
+    <label><input type="checkbox" id="chkD2"  checked> D2</label>
+    <label><input type="checkbox" id="chkD3"  checked> D3</label>
+    <label><input type="checkbox" id="chkNAIA" checked> NAIA</label>
 </div>
 
 <div class="controls">
@@ -94,88 +82,104 @@
     <button onclick="changeWeek(1)">Next Week →</button>
 </div>
 
-<div id="status" class="loading">Loading...</div>
+<h3 id="loading">Loading...</h3>
 
 <table>
-    <thead>
-        <tr>
-            <th>Time</th>
-            <th>Div</th>
-            <th>Matchup</th>
-            <th>TV</th>
-        </tr>
-    </thead>
-    <tbody id="schedule"></tbody>
+<thead>
+<tr>
+    <th>Time</th>
+    <th>Div</th>
+    <th>Matchup</th>
+    <th>TV</th>
+</tr>
+</thead>
+<tbody id="scheduleBody">
+</tbody>
 </table>
 
 <script>
-    let currentYear = new Date().getFullYear();
-    let currentWeek = getCurrentCFBWeek();
+let currentYear = new Date().getFullYear();
+let currentWeek = 1;
 
-    function getCurrentCFBWeek() {
-        const today = new Date();
-        const reference = new Date(today.getFullYear(), 7, 26); // Aug 26 = Week 0
-        const diff = Math.floor((today - reference) / (7 * 24 * 60 * 60 * 1000));
-        return Math.max(1, diff);
+// Determine current week based on date
+(function calculateCurrentWeek() {
+    const today = new Date();
+    const firstGame = new Date(today.getFullYear(), 7, 25); // Aug 25
+    const diff = (today - firstGame) / (1000 * 60 * 60 * 24);
+    currentWeek = Math.max(1, Math.floor(diff / 7) + 1);
+})();
+
+async function loadSchedule() {
+    document.getElementById("loading").innerText = "Loading...";
+
+    const url = `/api/schedule?year=${currentYear}&week=${currentWeek}`;
+    const resp = await fetch(url);
+    const data = await resp.json();
+
+    const body = document.getElementById("scheduleBody");
+    body.innerHTML = "";
+
+    const divFilters = {
+        fbs: document.getElementById("chkFBS").checked,
+        fcs: document.getElementById("chkFCS").checked,
+        d2:  document.getElementById("chkD2").checked,
+        d3:  document.getElementById("chkD3").checked,
+        naia:document.getElementById("chkNAIA").checked
+    };
+
+    const allGames = [];
+
+    for (const div in data.divisions) {
+        if (!divFilters[div]) continue;
+        data.divisions[div].forEach(g => {
+            allGames.push({
+                time: g.time || "",
+                matchup: g.matchup || "",
+                tv: g.tv || "",
+                div
+            });
+        });
     }
 
-    function changeWeek(delta) {
-        currentWeek += delta;
-        loadSchedule();
-    }
-
-    async function loadSchedule() {
-        document.getElementById("status").innerText = "Loading...";
-
-        const url = `/api/schedule?year=${currentYear}&week=${currentWeek}`;
-        let data;
-
-        try {
-            const res = await fetch(url);
-            data = await res.json();
-        } catch (e) {
-            document.getElementById("status").innerText = "Error loading data.";
-            return;
+    // Sort by division → time
+    const divOrder = { fbs: 1, fcs: 2, d2: 3, d3: 4, naia: 5 };
+    allGames.sort((a, b) => {
+        if (divOrder[a.div] !== divOrder[b.div]) {
+            return divOrder[a.div] - divOrder[b.div];
         }
+        return a.time.localeCompare(b.time);
+    });
 
-        const rows = [];
-        const divs = data.divisions;
+    // Render table
+    allGames.forEach(g => {
+        const row = document.createElement("tr");
+        row.innerHTML = `
+            <td>${g.time}</td>
+            <td>${g.div.toUpperCase()}</td>
+            <td>${g.matchup}</td>
+            <td>${g.tv}</td>
+        `;
+        body.appendChild(row);
+    });
 
-        if (document.getElementById("fbs").checked) rows.push(...label(divs.fbs, "FBS"));
-        if (document.getElementById("fcs").checked) rows.push(...label(divs.fcs, "FCS"));
-        if (document.getElementById("d2").checked)  rows.push(...label(divs.d2, "D2"));
-        if (document.getElementById("d3").checked)  rows.push(...label(divs.d3, "D3"));
-        if (document.getElementById("naia").checked) rows.push(...label(divs.naia, "NAIA"));
+    document.getElementById("loading").innerText =
+        `Loaded ${allGames.length} games for Week ${currentWeek}`;
+}
 
-        renderTable(rows);
-    }
+function changeWeek(delta) {
+    currentWeek += delta;
+    if (currentWeek < 1) currentWeek = 1;
+    loadSchedule();
+}
 
-    function label(list, div) {
-        return list.map(g => ({
-            time: g.time,
-            matchup: g.matchup,
-            tv: g.tv,
-            div: div
-        }));
-    }
+// Re-load when toggling filters
+document.querySelectorAll("input[type=checkbox]").forEach(cb => {
+    cb.addEventListener("change", loadSchedule);
+});
 
-    function renderTable(rows) {
-        const tbody = document.getElementById("schedule");
-        tbody.innerHTML = "";
+// Initial load
+loadSchedule();
+</script>
 
-        if (!rows.length) {
-            document.getElementById("status").innerText = "No games found.";
-            return;
-        }
-
-        document.getElementById("status").innerText = "";
-
-        rows.forEach(r => {
-            const tr = document.createElement("tr");
-            tr.innerHTML = `
-                <td>${r.time}</td>
-                <td>${r.div}</td>
-                <td>${r.matchup}</td>
-                <td>${r.tv || ""}</td>
-            `;
-            tbody.appendC
+</body>
+</html>
